update routing automation tsm

--- a/src/app/pages/dte/automation/index/audience-trade-program-index.component.html
+++ b/src/app/pages/dte/automation/index/audience-trade-program-index.component.html
@@ -5,7 +5,7 @@
       <mat-icon>add</mat-icon> BUAT NON TSM
     </button>
     
-    <button style="width: 170px" [routerLink]="['/dte','automation', 'create_tsm']" *ngIf="btnTsm" mat-raised-button type="button">
+    <button style="width: 170px" [routerLink]="['/dte','automation', 'createtsm']" *ngIf="btnTsm" mat-raised-button type="button">
       <mat-icon>add</mat-icon> BUAT TSM
     </button>
   </page-content-header>
