--- a/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
+++ b/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
@@ -12,7 +12,8 @@
         <mat-tab label="Detail Voucher">
           <div class="ayo-middle" fxLayout="column">
             <form autocomplete="off" [formGroup]="formDetilVoucher" (keydown.enter)="$event.preventDefault();">
-              <div class='p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center" *ngIf="isDetail || isEdit">
+              <div class='p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center"
+                *ngIf="isDetail || isEdit">
                 <div class="button-row">
                   <button mat-flat-button style="width: 160px" color="white" (click)="exportInvoice()">
                     <mat-icon>vertical_align_top</mat-icon> Export Invoice
@@ -39,7 +40,8 @@
                       placeholder="Tanggal Voucher Dibagikan" formControlName="voucherDate" [min]="minDateVoucher">
                     <mat-datepicker-toggle matSuffix [for]="voucherPicker"></mat-datepicker-toggle>
                     <mat-datepicker #voucherPicker></mat-datepicker>
-                    <mat-error *ngIf="formDetilVoucher.controls['voucherDate'].hasError('required') && formDetilVoucher.controls['voucherDate'].touched">
+                    <mat-error
+                      *ngIf="formDetilVoucher.controls['voucherDate'].hasError('required') && formDetilVoucher.controls['voucherDate'].touched">
                       Tanggal Voucher Dibagikan harus diisi.
                     </mat-error>
                   </mat-form-field>
@@ -50,7 +52,8 @@
                       formControlName="voucherExpiry">
                     <mat-datepicker-toggle matSuffix [for]="voucherExpiry"></mat-datepicker-toggle>
                     <mat-datepicker #voucherExpiry></mat-datepicker>
-                    <mat-error *ngIf="formDetilVoucher.controls['voucherExpiry'].hasError('required') && formDetilVoucher.controls['voucherExpiry'].touched">
+                    <mat-error
+                      *ngIf="formDetilVoucher.controls['voucherExpiry'].hasError('required') && formDetilVoucher.controls['voucherExpiry'].touched">
                       Tanggal Kadaluarsa Voucher harus diisi.
                     </mat-error>
                   </mat-form-field>
@@ -61,9 +64,9 @@
                     #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="2" cdkAutosizeMaxRows="15"
                     placeholder="Catatan"></textarea>
                 </mat-form-field>
-              
+
                 <div fxFlex="50" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
-                  <h4 style="font-weight: bold;" >Batasan</h4>
+                  <h4 style="font-weight: bold;">Batasan</h4>
                   <div fxFlex="100">
                     <mat-checkbox formControlName="limit_by_product" (change)="isChecked('product', $event)"
                       style="margin-right: 25px;">Batasi dengan Produk
@@ -99,11 +102,11 @@
 
                 <mat-form-field fxFlex="50">
                   <mat-select placeholder="Batasan Berdasarkan Kategori" formControlName="category"
-                    [disabled]="!formDetilVoucher.get('limit_by_category').value">
+                    [disabled]="!formDetilVoucher.get('limit_by_category').value" multiple>
                     <mat-option *ngFor="let cat of listCategories" [value]="cat.id">{{ cat.name }}</mat-option>
                   </mat-select>
                 </mat-form-field>
-                
+
               </div>
 
               <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="isEdit || !isDetail">
