--- a/src/app/pages/dte/pengaturan-attribute-misi/index/pengaturan-attribute-misi-index.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/pengaturan-attribute-misi-index.component.html
@@ -22,13 +22,17 @@
         </mat-tab>
 
         <!-- TINGKAT KESULITAN MISI -->
-        <mat-tab label="Tingkat Kesulitan Misi">
+        <mat-tab label="Internal Kategori">
           <app-list-kesulitan-misi></app-list-kesulitan-misi>
         </mat-tab>
 
         <!-- KETEGORI MISI -->
         <mat-tab label="Kategori Misi">
           <app-list-kategori-misi></app-list-kategori-misi>
+        </mat-tab>
+        <!-- Project -->
+        <mat-tab label="Project">
+          <app-project-list></app-project-list>
         </mat-tab>
       </mat-tab-group>
     </div>
