--- a/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-kesulitan-misi/dialog-kesulitan-misi.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-kesulitan-misi/dialog-kesulitan-misi.component.html
@@ -1,17 +1,23 @@
 <form [formGroup]="form" (ngSubmit)="submit(form)">
-  <h1 mat-dialog-title>Buat Tingkat Kesulitan Misi</h1>
+  <h1 mat-dialog-title>Buat Internal Kategori</h1>
   <mat-dialog-content>
     <mat-form-field>
       <input
         matInput
         formControlName="name"
-        placeholder="Nama Tingkat Kesulitan Misi"
+        placeholder="Nama Internal Kategori"
         required
       />
     </mat-form-field>
+    <div *ngIf="condition === true">
+      <small class="form-text text-danger"
+                  *ngIf="condition === true">
+                   <p style="color:red"> Nama Kategori sudah ada, silahkan input nama lain</p>
+      </small>
+    </div>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <button mat-raised-button color="success" type="submit">Simpan</button>
+    <button mat-raised-button color="success" type="submit" >Simpan</button>
     <button
       mat-raised-button
       color="warn"
