--- a/src/app/pages/dte/pengaturan-attribute-misi/index/list-kesulitan-misi/list-kesulitan-misi.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/list-kesulitan-misi/list-kesulitan-misi.component.html
@@ -9,7 +9,7 @@
   </button>
   <div class="table-wrapper">
     <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-      <h2 class="pl-8">Tipe Misi</h2>
+      <h2 class="pl-8">Internal Kategori</h2>
       <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
         <mat-icon>search</mat-icon>
         <mat-form-field class="is-light tab-search">
