Change toolbox level to toolbox internal

--- a/src/app/pages/dte/pengaturan-attribute-misi/index/pengaturan-attribute-misi-index.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/pengaturan-attribute-misi-index.component.html
@@ -21,9 +21,9 @@
           <app-list-tipe-misi></app-list-tipe-misi>
         </mat-tab>
 
-        <!-- TINGKAT KESULITAN MISI -->
+        <!-- TINGKAT internal MISI -->
         <mat-tab label="Internal Kategori">
-          <app-list-kesulitan-misi></app-list-kesulitan-misi>
+          <app-list-internal-misi></app-list-internal-misi>
         </mat-tab>
 
         <!-- KETEGORI MISI -->
