--- a/src/app/pages/dte/template/index/template-index.component.html
+++ b/src/app/pages/dte/template/index/template-index.component.html
@@ -31,8 +31,8 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Internal Kategori" [(ngModel)] = "filterKesulitanMisi" name = "filterKesulitanMisi"  [ngModelOptions]="{standalone: true}">
-                <mat-option [value]="lsCat.id" *ngFor="let lsCat of listTingkatkesulitanMisi"> {{lsCat.name}} </mat-option>
+              <mat-select placeholder="Internal Kategori" [(ngModel)] = "filterInternalMisi" name = "filterInternalMisi"  [ngModelOptions]="{standalone: true}">
+                <mat-option [value]="lsCat.id" *ngFor="let lsCat of listTingkatinternalMisi"> {{lsCat.name}} </mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
@@ -90,7 +90,7 @@
         <ngx-datatable-column [width]="200" name="Deskripsi" headerClass="textright" prop="description"></ngx-datatable-column>
         <ngx-datatable-column [width]="100" name="Kategory Toolbox" headerClass="textright" prop="task_toolbox_name"></ngx-datatable-column>
         <ngx-datatable-column [width]="100" name="Tipe Misi" headerClass="textright" prop="task_toolbox_type_name"></ngx-datatable-column>
-        <ngx-datatable-column [width]="100" name="Internal Kategori" headerClass="textright" prop="task_toolbox_level_name"></ngx-datatable-column>
+        <ngx-datatable-column [width]="100" name="Internal Kategori" headerClass="textright" prop="task_toolbox_internal_name"></ngx-datatable-column>
         <ngx-datatable-column [width]="100" name="Kategori Misi" headerClass="textright" prop="task_toolbox_categories_name"></ngx-datatable-column>
         <ngx-datatable-column [width]="100" name="Project Misi" headerClass="textright" prop ="task_toolbox_project_name"></ngx-datatable-column>
         <ngx-datatable-column [width]="80" name="Tindakan" headerClass="textright" [sortable]="false">
