--- a/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
@@ -116,7 +116,7 @@
             </div>
             <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch" *ngIf="detailVoucher?.is_enable_panel_customer">
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="National" formControlName="national" matTooltip="{{getToolTipData(wil.get('national').value, wil.controls['list_national'].value)}}">
+                <mat-select placeholder="National" formControlName="national">
                   <mat-option *ngFor="let item of wil.controls['list_national'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
@@ -126,8 +126,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Zone" formControlName="zone" matTooltip="{{getToolTipData(wil.get('zone').value, wil.controls['list_zone'].value)}}"
-                  (selectionChange)="generateList('region', wil.get('zone').value, i, 'selection')">
+                <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="generateList('region', wil.get('zone').value, i, 'selection')">
                   <mat-option *ngFor="let item of wil.controls['list_zone'].value" [value]="item.id">{{item.name}}
                   </mat-option>
                 </mat-select>
@@ -136,8 +135,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Regional" formControlName="region" matTooltip="{{getToolTipData(wil.get('region').value, wil.controls['list_region'].value)}}"
-                  (selectionChange)="generateList('area', wil.get('region').value, i, 'selection')">
+                <mat-select placeholder="Regional" formControlName="region" (selectionChange)="generateList('area', wil.get('region').value, i, 'selection')">
                   <mat-option *ngFor="let item of wil.controls['list_region'].value" [value]="item.id">{{item.name}}
                   </mat-option>
                 </mat-select>
@@ -146,8 +144,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Area" formControlName="area" matTooltip="{{getToolTipData(wil.get('area').value, wil.controls['list_area'].value)}}"
-                  (selectionChange)="generateList('salespoint', wil.get('area').value, i, 'selection')">
+                <mat-select placeholder="Area" formControlName="area" (selectionChange)="generateList('salespoint', wil.get('area').value, i, 'selection')">
                   <mat-option *ngFor="let item of wil.controls['list_area'].value" [value]="item.id">{{item.name}}
                   </mat-option>
                 </mat-select>
@@ -156,8 +153,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Salespoint" formControlName="salespoint" matTooltip="{{getToolTipData(wil.get('salespoint').value, wil.controls['list_salespoint'].value)}}"
-                  (selectionChange)="generateList('district', wil.get('salespoint').value, i, 'selection')">
+                <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="generateList('district', wil.get('salespoint').value, i, 'selection')">
                   <mat-option *ngFor="let item of wil.controls['list_salespoint'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
@@ -167,8 +163,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="District" formControlName="district" matTooltip="{{getToolTipData(wil.get('district').value, wil.controls['list_district'].value)}}"
-                  (selectionChange)="generateList('territory', wil.get('district').value, i, 'selection')">
+                <mat-select placeholder="District" formControlName="district" (selectionChange)="generateList('territory', wil.get('district').value, i, 'selection')">
                   <mat-option *ngFor="let item of wil.controls['list_district'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
@@ -178,7 +173,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Territory" formControlName="territory" matTooltip="{{getToolTipData(wil.get('territory').value, wil.controls['list_territory'].value)}}">
+                <mat-select placeholder="Territory" formControlName="territory">
                   <mat-option *ngFor="let item of wil.controls['list_territory'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
