--- a/src/app/pages/b2c-voucher/edit/tab/preview-voucher/confirmation-publish-dialog/confirmation-publish-dialog.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/preview-voucher/confirmation-publish-dialog/confirmation-publish-dialog.component.html
@@ -8,8 +8,8 @@
     </ul>
   </div>
   <div mat-dialog-actions class="actions">
-    <button *ngIf="!data.isDisagree && data.buttonText[0] !== 'draft'" mat-button class="reject" style="cursor: pointer;" (click)="data.confirmCallback()">{{data.buttonText[0]}}</button>
-    <button *ngIf="!data.isDisagree && data.buttonText[0] == 'draft'" mat-button class="confirm" style="cursor: pointer;" (click)="data.confirmCallback()">{{data.buttonText[0]}}</button>
+    <button *ngIf="!data.isDisagree && data.buttonText[0] == 'Unpublish'" mat-button class="reject" style="cursor: pointer;" (click)="data.confirmCallback()">{{data.buttonText[0]}}</button>
+    <button *ngIf="!data.isDisagree && data.buttonText[0] == 'Publish'" mat-button class="confirm" style="cursor: pointer;" (click)="data.confirmCallback()">{{data.buttonText[0]}}</button>
     <button *ngIf="data.isDisagree && valueRadio" mat-button class="confirm" style="cursor: pointer;" (click)="data.confirmCallback(valueRadio)">{{data.buttonText[0]}}</button>
     <button *ngIf="data.isDisagree && !valueRadio" mat-button class="disable" style="cursor: no-drop;" [disabled]="!valueRadio">{{data.buttonText[0]}}</button>
     <button mat-button class="reject" style="cursor: pointer;" (click)="closeDialog()">{{data.buttonText[1]}}</button>
