feat: CDE-2779#B2CVoucherEnhancement - revise 1

--- a/src/app/pages/b2c-voucher/index/list-voucher-reimbursement/list-voucher-reimbursement.component.html
+++ b/src/app/pages/b2c-voucher/index/list-voucher-reimbursement/list-voucher-reimbursement.component.html
@@ -103,7 +103,7 @@
 
         <ngx-datatable-column name="Retailer Code" prop="code">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <a class="direct-edit">{{row.code}} </a>
+            <a>{{row.code}}</a>
           </ng-template>
         </ngx-datatable-column>
 
