--- a/src/app/pages/src-catalogue/product-catalogue/edit/product-catalogue-edit.component.html
+++ b/src/app/pages/src-catalogue/product-catalogue/edit/product-catalogue-edit.component.html
@@ -20,16 +20,14 @@
             </mat-form-field>
           </div>
 
-          <div fxLayout="row" fxFlex="50" style="margin-bottom: 40px;">
-            <div fxLayout="column">
-              <p>Deskripsi Produk</p>
-              <textarea [froalaEditor]="options" formControlName="description"
-                placeholder="Deskripsi Produk"></textarea>
+          <div fxLayout="row">
+            <mat-form-field fxFlex="50" class="is-light form-primary">
+              <input matInput type="text" formControlName="description" placeholder="Deskripsi Produk">
               <mat-error
                 *ngIf="formProduct.controls['description'].hasError('required') && formProduct.controls['description'].touched">
                 Deskripsi Produk harus diisi
               </mat-error>
-            </div>
+            </mat-form-field>
           </div>
 
           <div fxLayout="row" *ngIf="!vendor_id">
